# govocitos

./: ChangeLog  MAINTAINERS  Makefile.am  configure.ac
po/: ChangeLog  Makefile  Makefile.in  POTFILES
src/: CoreGovocitos.cpp  CoreGovocitos.h  Dialogos.cpp  Dialogos.h  Fichero.cpp  Fichero.h  Makefile.am  Utiles.cpp  Utiles.h  main.cpp
src/Bordes/: DeteccionAut.cpp  DeteccionAut.h  image.h
src/Clasificador/: Clasificador.cpp  Clasificador.h  svm.cpp
src/Clasificador/faneca/: glrls_a0.txt
src/Clasificador/faneca/.svn/: entries
src/Clasificador/faneca/.svn/text-base/: fich_svm_clasif_clases_glrls_a0.dat.svn-base
src/Clasificador/lusy/: glrls_a0.txt
src/Clasificador/lusy/.svn/: entries
src/Clasificador/lusy/.svn/text-base/: fich_svm_clasif_clases_glrls_a0.dat.svn-base  fich_svm_clasif_estados_glrls_a0.dat.svn-base
src/Clasificador/merluza/: glrls_a0.txt
src/Clasificador/merluza/.svn/: entries
src/Clasificador/merluza/.svn/text-base/: fich_med_desv_clases_glrls_a0.dat.svn-base  fich_svm_clasif_clases_glrls_a0.dat.svn-base  fich_svm_clasif_estados_glrls_a0.dat.svn-base
src/Conectividad/: XmlConectividad.cpp  XmlConectividad.h  XmlWebDatos.cpp  XmlWebDatos.h  XmlWebFecundidad.cpp  XmlWebFecundidad.h  XmlWebImagenes.cpp  XmlWebImagenes.h  XmlWebIndividuo.cpp  XmlWebIndividuo.h
src/Config/: ConfigGovocitos.cpp  ConfigGovocitos.h  OpcionesPref.cpp  OpcionesPref.h  OpcionesRej.cpp  OpcionesRej.h
src/Estructuras/: Celula.cpp  Celula.h  ClaseCelula.cpp  ClaseCelula.h  ClasificaCelula.cpp  ClasificaCelula.h  DataImage.cpp  DataImage.h  EstadoCelula.cpp  EstadoCelula.h  ImageCells.cpp  ImageCells.h  ListadoCache.cpp  ListadoCache.h  ListadoCelulas.cpp  ListadoCelulas.h  ListadoImagenes.cpp  ListadoImagenes.h  ListadoIndividuo.cpp  ListadoIndividuo.h  NucleoCelula.cpp  NucleoCelula.h  ResultadosImagen.cpp  ResultadosImagen.h
src/Glade/: AcercaDe.glade  CalculaDiametro.glade  DatosDiametros.glade  DatosEstadisticos.glade  DiametrosLupa.glade  PanelPropiedades.glade  PanelResultados.glade  Preferencias.glade  SelecAccionDetec.glade  panelCerradoDatos.glade  seleccionaClaseEstado.glade
src/Interfaz/: BarraEstado.cpp  BarraEstado.h  DialogoAGLocal.cpp  DialogoAGLocal.h  DialogoBarraProgres.cpp  DialogoBarraProgres.h  DialogoIndividuo.cpp  DialogoIndividuo.h  DialogoRemoto.cpp  DialogoRemoto.h  InterfazGovocitos.cpp  InterfazGovocitos.h  MenuBarraPrincipal.cpp  MenuBarraPrincipal.h  MenuPopup.cpp  MenuPopup.h  MenuSeleccion.cpp  MenuSeleccion.h  PanelDatosEstadisticos.cpp  PanelDatosEstadisticos.h  PanelDiametros.cpp  PanelDiametros.h  PanelDibujado.cpp  PanelDibujado.h  PanelFecundidad.cpp  PanelFecundidad.h  PanelPropiedades.cpp  PanelPropiedades.h  PlotHistogram.cpp  PlotHistogram.h  Preferencias.cpp  Preferencias.h  RejillaPersonalizada.cpp  RejillaPersonalizada.h
src/Modulos/: CalculoEstadistico.cpp  CalculoEstadistico.h  CalculoFecundidad.cpp  CalculoFecundidad.h  CalculoMorfologico.cpp  CalculoMorfologico.h  ConexionBD.cpp  ConexionBD.h  DesReHacer.cpp  DesReHacer.h  DibujadoCelula.cpp  DibujadoCelula.h  HttpsConexion.cpp  HttpsConexion.h  ModulosGovocitos.cpp  ModulosGovocitos.h  Rejilla.cpp  Rejilla.h  ResultFecundidad.cpp  ResultFecundidad.h  ScanFillLine.cpp  ScanFillLine.h  SftpConexion.cpp  SftpConexion.h  SistemaDibujado.cpp  SistemaDibujado.h  XmlCache.cpp  XmlCache.h  XmlParse.cpp  XmlParse.h  XmlPreferencias.cpp  XmlPreferencias.h
